--- a/src/Crudify.Api/appsettings.json
+++ b/src/Crudify.Api/appsettings.json
@@ -10,6 +10,7 @@
     "defaultConnectionString": "Server=.;Database=Crudify;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "JwtConfig": {
-    "SecretKey": "7S79jvOkEdwoRqHx7S79jvOkEdwoRqHx65HnMJKIL!@IjPmZaJ21!"
+    "SecretKey": "7S79jvOkEdwoRqHx7S79jvOkEdwoRqHx65HnMJKIL!@IjPmZaJ21!",
+    "TokenExpiry": 30
   }
 }
